fix: various fixes on header and search bar spacing
Removed duplicate keys in product and card components

--- a/src/App.css
+++ b/src/App.css
@@ -6,9 +6,7 @@
   background: #f5f5f5;
   height: 100%;
   padding-bottom: 10px;
-}
-
-.App-header__header {
+  margin-bottom: 9px;
 }
 
 .App-header__title {
@@ -25,8 +23,6 @@
   margin-left: 5px;
 }
 
-.menu-display {
-}
 .cart-display {
   width: 90%;
   margin: 20px auto 0;
@@ -75,9 +71,6 @@
 .cart-display__message-paragraph {
   color: var(--grey-50);
   display: block;
-}
-
-.cart-display__carousel {
 }
 
 .cart-display__total {
